# tree-sitter-asciidoc

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE-REVIEW-CHECKLIST.adoc  CONTRIBUTING.md  CRASH_FIX_SUMMARY.md  Cargo.toml  DEVNOTES.md  ENHANCEMENT_ISSUES.md  FEATURE-BRANCH-SUMMARY.md  GITFLOW-FEATURES.adoc  IMPROVEMENTS.md  Makefile  NESTED_LISTS_STATUS.md  PARSER_STATUS.md  PEER-REVIEW-REQUEST.adoc  PERFORMANCE.md  PROGRESS_SUMMARY.md  Package.swift  README.md  SEGFAULT_FIX.md  SYNTAX_HIGHLIGHTING.md  TESTING.md  TEST_STATUS.md  TEST_UPDATES_REVIEW.md  TODO.adoc  VERIFICATION-REPORT.md  WARP.md  adv_snippet.adoc  analyze-failures.ps1  asciidoc-ebnf.md  asciidoc-syntax-reference.adoc  asciidoc.ilk  attr_test.adoc  autolink_completion_summary.md  baseline-treesitter-tests.txt  binding.gyp  bt2.adoc  bt3.adoc  (+365 more)
.cargo/: config.toml
.github/: dependabot.yml
artifacts/: after-fixes-manual.txt  after-fixes.txt  baseline.txt  current-test-results.txt  failure-analysis.md  failures-categorized.md  failures-list.txt  grammar-audit.md  passing-audit.md  performance-check.txt  progress-summary.md  test-analysis.md  test-results-summary.json  validation-summary.md
docs/: KNOWN_TEST_LIMITATIONS.md  SCANNER_ENHANCEMENTS.md  ast-invariants.md
examples/: highlight-blocks.adoc  highlight-inline.adoc  highlight-lists.adoc  highlight-macros-anchors.adoc  highlight-sections.adoc  highlight-tables.adoc  highlight-text-formatting.adoc  mixed-code-blocks.adoc  sample.adoc
lib/: completion-cli.js  completions.js
notes/: plain-text-conflicts.md
queries/: README.md  (+8 more)
(+534 files in other folders)
